--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     importpath = "github.com/ice1n36/brain",
     visibility = ["//visibility:private"],
     deps = [
+        "//handlers:go_default_library",
         "@com_github_gorilla_mux//:go_default_library",
     ],
 )
