--- a/cli/BUILD.bazel
+++ b/cli/BUILD.bazel
@@ -1,16 +1,15 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "main.go",
-        "peloton.go",
-        "root.go",
-    ],
+    srcs = ["main.go"],
     importpath = "github.com/ice1n36/brain/cli",
     visibility = ["//visibility:public"],
-    deps = [
-        "//clients:go_default_library",
-        "@com_github_spf13_cobra//:go_default_library",
-    ],
+    deps = ["//cmd:go_default_library"],
+)
+
+go_binary(
+    name = "cli",
+    embed = [":go_default_library"],
+    visibility = ["//visibility:public"],
 )
